--- a/client/src/components/Templates/Maps/MapStyles.css
+++ b/client/src/components/Templates/Maps/MapStyles.css
@@ -49,7 +49,7 @@
   font-size: 14px;
 }
 
-.yandex-placemark {
+.pillar-placemark {
   width: 22px;
   height: 22px;
   border-radius: 50%;
@@ -70,7 +70,7 @@
 
 
 /* Style for the default "pillars" passed in via props */
-.pillar-placemark {
+.mufta-placemark {
   width: 12px;
   height: 12px;
   background-color: #1e98ff; /* Default blue color */
